--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-router@5/umd/react-router.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-router-dom@5/umd/react-router-dom.min.js"></script>
-    <!-- Load our Axios and our component. -->
+    <!-- Load our Axios and our components. -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./fetch_api.jsx" defer type="text/babel"></script>
-    <!-- cd /c/rcl/rcl/emeritus mit/jsx react/fetch_api -->
+    <script src="./christmas.jsx" defer type="text/babel"></script>
+    <!-- cd /c/rcl/rcl/'emeritus mit'/'jsx react'/fetch_api -->
   </body>
 </html>
